# rpi2350_ha

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  README.md  kpl_build.sh  kpl_flash.sh  kpl_monitor.sh  rpi2350_ha_ble.c  rpi2350_ha_inf.h  rpi2350_ha_main.c  rpi2350_ha_main.cpp  rpi2350_ha_main_inf.h  rpi2350_ha_priv.h  rpi2350_ha_pub.h  rpi2350_ha_wifi.c
ble/: rpi2350_ha_ble.c  rpi2350_ha_ble_inf.h  rpi2350_ha_ble_priv.h  rpi2350_ha_ble_pub.h
lib/Eclipse-Paho-MQTT-C-1.3.14-Linux/lib/: libpaho-mqtt3a.so.1  libpaho-mqtt3a.so.1.3.14  libpaho-mqtt3as.so.1  libpaho-mqtt3as.so.1.3.14  libpaho-mqtt3c.so.1  libpaho-mqtt3c.so.1.3.14  libpaho-mqtt3cs.so.1  libpaho-mqtt3cs.so.1.3.14
lib/Eclipse-Paho-MQTT-C-1.3.14-Linux/lib/cmake/eclipse-paho-mqtt-c/: eclipse-paho-mqtt-cConfig-debug.cmake  eclipse-paho-mqtt-cConfig.cmake
os/: rpi2350_ha_main.c  rpi2350_ha_priv.h  rpi2350_ha_pub.h
os_sched/: rpi2350_ha_os_sched.c  rpi2350_ha_os_sched_inf.h  rpi2350_ha_os_sched_priv.h  rpi2350_ha_os_sched_pub.h
wifi/: rpi2350_ha_wifi.c  rpi2350_ha_wifi_inf.h  rpi2350_ha_wifi_priv.h  rpi2350_ha_wifi_pub.h
